# MeshToFeatures

./: .gitignore  CHANGELOG.md  README.md  package.xml  pyproject.toml  requirements.txt
docs/: VERIFY.md  design-notes.md
freecad/: __init__.py
freecad/meshtofeatures_wb/: build.py  commands.py  emit.py  init_gui.py  ui.py
meshtofeatures/: __init__.py  conditioning.py  emission.py  features.py  fitting.py  history.py  patterns.py  pipeline.py  primitives.py  segmentation.py  snapping.py  standards.py
scripts/: freecad_smoke_test.py  probe_bore_placement.py
tests/: test_adversarial.py  test_base_holes.py  test_blob_split.py  test_boundary_loops.py  test_completeness.py  test_composites.py  test_countersink.py  test_degenerate_loops.py  test_emission.py  test_features.py  test_fillet_ops.py  test_fitting.py  test_frame_canonical.py  test_freecad_adapter.py  test_history.py  test_hole_semantics.py  test_lateral_pad.py  test_lateral_pad_build.py  test_namespace.py  test_overcomplex.py  test_patterns.py  test_pipeline.py  test_polish.py  test_primitives.py  test_progress.py  test_real_stl.py  test_rigor.py  test_robustness.py  test_segmentation.py  test_slots.py  test_snapping.py  test_steps.py
